syntax = "proto3";
import "pipes.proto";

option java_multiple_files = true;
option java_package = "com.krickert.search.service";
option java_outer_classname = "Pipes";
option objc_class_prefix = "HLW";

package com.krickert.search;

service PipeService {
  rpc send (PipeRequest) returns (PipeReply) {}
}

message PipeRequest {
  com.krickert.search.model.pipe.PipeDocument document = 1;
}

message PipeReply {
  com.krickert.search.model.pipe.PipeDocument document = 1;
}

